src/test/ui/consts/const-eval/issue-50814-2.stderr
error: any use of this value will cause an error
  --> $DIR/issue-50814-2.rs:12:24
   |
LL |     const BAR: usize = [5, 6, 7][T::BOO];
   |     -------------------^^^^^^^^^^^^^^^^^-
   |                        |
   |                        index out of bounds: the len is 3 but the index is 42
   |
   = note: #[deny(const_err)] on by default

error[E0080]: evaluation of constant expression failed
  --> $DIR/issue-50814-2.rs:16:5
   |
LL |     &<A<T> as Foo<T>>::BAR
   |     ^---------------------
   |      |
   |      referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
